--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,15 @@ layout: default
   </nav>
 </section>
 
+<script src="https://utteranc.es/client.js"
+        repo=plyr0/plyr0.github.io
+        issue-term="pathname"
+        label="utterance"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>
+
 {% if site.comments-enabled %}
   {% include disqus.html %}
 {% endif %}
