--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,11 +38,27 @@ layout: default
   </nav>
 </section>
 
-<script src="https://utteranc.es/client.js"
+<!--<script src="https://utteranc.es/client.js"
         repo=plyr0/plyr0.github.io
         issue-term="pathname"
         label="utterance"
         theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>-->
+
+<script src="https://giscus.app/client.js"
+        data-repo="plyr0/plyr0.github.io"
+        data-repo-id="R_kgDOJ2KIHQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOJ2KIHc4Cd3WJ"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="pl"
         crossorigin="anonymous"
         async>
 </script>
